/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.13/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    application
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

val osName = System.getProperty("os.name")
val platform = when {
    osName.startsWith("Windows") -> "win"
    osName.startsWith("Mac") -> "mac"
    else -> "linux"
}

dependencies {
    implementation("org.openjfx:javafx-base:21.0.1:$platform")
    implementation("org.openjfx:javafx-controls:21.0.1:$platform")
    implementation("org.openjfx:javafx-graphics:21.0.1:$platform")

    implementation("com.opencsv:opencsv:5.10")

    implementation(libs.guava)

    // Use JUnit Jupiter for testing.
    testImplementation(libs.junit.jupiter)

    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    // Define the main class for the application.
    mainClass = "projetalgo.Main"
}

tasks.named<Test>("test") {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}
